--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>test</title>
-  <link rel="stylesheet" href="./style.css">
 
+  <link rel="stylesheet" href="./style.css">
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Test</title>
+    <style type="text/css" media="screen">
+     * {
+       margin: 0; 
+       padding: 0;
+     }
+
+     div#banner { 
+       position: absolute; 
+       top: 0; 
+       left: 0; 
+       background-color: #262626; 
+       width: 100%; 
+     }
+     div#banner-content { 
+       width: 0px; 
+       margin: 0 auto; 
+       padding: 0px; 
+       border: 1px solid #000;
+     }
+     div#main-content { 
+       padding-top: 850px;
+    }
+    </style>
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<p class="textclas">hi</p>
-<!-- partial -->
-  
+  <div id="banner">
+    <img class="fit" src="https://i.ibb.co/rsNhc4R/letysgo.png" alt="Girl in a jacket">
+  </div>
+  <div id="main-content">
+    <center><h1>platnum.xyz clothing lines</h1></center>
+  </div>
 </body>
 </html>
